# ckpttncpp

./: .CMakeLists.txt.un~  .clang-tidy  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis-old.yml  .travis.yml  CMakeLists.txt  CMakeLists.txt~  CTestConfig.cmake  README.md  envconfig.sh  environment-dev.yml  note.md  requirements.txt
.github/workflows/: cmake-codecov.yml  cmake-debug.yml  cmake-release.yml  cmake.yml
.github/workflows-old/: cmake-release.yml
app/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
app/src/: main.cpp
docs/: Makefile  conf.py  how_created.rst  index.rst  requirements.txt  using_intersphinx.rst
docs/source/: conf.py  index.rst
docs/source/api/: classAdjacencyView.rst  classAtlasView.rst  classFMBiGainCalc.rst  classFMConstrMgr.rst  classFMGainMgr.rst  classFMPartMgr.rst  (+133 more)
lib/: .CMakeLists.txt.un~  CMakeLists.txt
lib/bench/: CMakeLists.txt  FMBi_2pin_nets.cpp  FMKWay_2pin_nets.cpp
lib/include/: cppitertools
lib/src/: .FMKWayGainCalc.cpp.un~  FDBiGainCalc.cpp  FDBiGainMgr2.cpp  FDGainMgr.cpp  FDKWayGainCalc.cpp  FDKWayGainMgr.cpp  FDPartMgr.cpp  FMBiGainCalc.cpp  FMBiGainMgr.cpp  FMBiGainMgr.tpp  FMBiGainMgr2.cpp  FMBiPartMgr.cpp  FMBiPartMgr.tpp  FMConstMgr.cpp  FMConstrMgr.cpp  FMGainMgr.cpp  FMKWayConstMgr.cpp  FMKWayConstrMgr.cpp  FMKWayGainCalc.cpp  FMKWayGainMgr.cpp  FMKWayPart.cpp  FMPartMgr.cpp  HierNetlist.cpp  MLPartMgr.cpp  PartMgrBase.cpp  bpqueue.cpp  min_cover.cpp  netlist.cpp  readwrite.cpp  set_partition.cpp  set_partition.tpp
lib/test/: CMakeLists.txt
testcases/: dwarf1.json  p1.json
(+158 files in other folders)
